headers/cudnn.jl


function make_ulong3(x::Culong, y::Culong, z::Culong)
    ccall((:make_ulong3, vector_functions), ulong3, (Culong, Culong, Culong), x, y, z)
end

function make_long4(x::Clong, y::Clong, z::Clong, w::Clong)
    ccall((:make_long4, vector_functions), long4, (Clong, Clong, Clong, Clong), x, y, z, w)
end

function make_ulong4(x::Culong, y::Culong, z::Culong, w::Culong)
    ccall((:make_ulong4, vector_functions), ulong4, (Culong, Culong, Culong, Culong), x, y, z, w)
end

function make_float1(x::Cfloat)
    ccall((:make_float1, vector_functions), float1, (Cfloat,), x)
end

function make_float2(x::Cfloat, y::Cfloat)
    ccall((:make_float2, vector_functions), float2, (Cfloat, Cfloat), x, y)
end

function make_float3(x::Cfloat, y::Cfloat, z::Cfloat)
    ccall((:make_float3, vector_functions), float3, (Cfloat, Cfloat, Cfloat), x, y, z)
end

function make_float4(x::Cfloat, y::Cfloat, z::Cfloat, w::Cfloat)
    ccall((:make_float4, vector_functions), float4, (Cfloat, Cfloat, Cfloat, Cfloat), x, y, z, w)
end

function make_longlong1(x::Clonglong)
    ccall((:make_longlong1, vector_functions), longlong1, (Clonglong,), x)
end

function make_ulonglong1(x::Culonglong)
    ccall((:make_ulonglong1, vector_functions), ulonglong1, (Culonglong,), x)
end

function make_longlong2(x::Clonglong, y::Clonglong)
    ccall((:make_longlong2, vector_functions), longlong2, (Clonglong, Clonglong), x, y)
end

function make_ulonglong2(x::Culonglong, y::Culonglong)
    ccall((:make_ulonglong2, vector_functions), ulonglong2, (Culonglong, Culonglong), x, y)
end

function make_longlong3(x::Clonglong, y::Clonglong, z::Clonglong)
    ccall((:make_longlong3, vector_functions), longlong3, (Clonglong, Clonglong, Clonglong), x, y, z)
end

function make_ulonglong3(x::Culonglong, y::Culonglong, z::Culonglong)
    ccall((:make_ulonglong3, vector_functions), ulonglong3, (Culonglong, Culonglong, Culonglong), x, y, z)
end

function make_longlong4(x::Clonglong, y::Clonglong, z::Clonglong, w::Clonglong)
    ccall((:make_longlong4, vector_functions), longlong4, (Clonglong, Clonglong, Clonglong, Clonglong), x, y, z, w)
end

function make_ulonglong4(x::Culonglong, y::Culonglong, z::Culonglong, w::Culonglong)
    ccall((:make_ulonglong4, vector_functions), ulonglong4, (Culonglong, Culonglong, Culonglong, Culonglong), x, y, z, w)
end

function make_double1(x::Cdouble)
    ccall((:make_double1, vector_functions), double1, (Cdouble,), x)
end

function make_double2(x::Cdouble, y::Cdouble)
    ccall((:make_double2, vector_functions), double2, (Cdouble, Cdouble), x, y)
end

function make_double3(x::Cdouble, y::Cdouble, z::Cdouble)
    ccall((:make_double3, vector_functions), double3, (Cdouble, Cdouble, Cdouble), x, y, z)
end

function make_double4(x::Cdouble, y::Cdouble, z::Cdouble, w::Cdouble)
    ccall((:make_double4, vector_functions), double4, (Cdouble, Cdouble, Cdouble, Cdouble), x, y, z, w)
end

function cudnnGetVersion()
    ccall((:cudnnGetVersion, cudnn), Cint, ())
end

function cudnnGetErrorString(status::cudnnStatus_t)
    ccall((:cudnnGetErrorString, cudnn), Cstring, (cudnnStatus_t,), status)
end

function cudnnCreate(handle)
    ccall((:cudnnCreate, cudnn), cudnnStatus_t, (Ptr{cudnnHandle_t},), handle)
end

function cudnnDestroy(handle::cudnnHandle_t)
    ccall((:cudnnDestroy, cudnn), cudnnStatus_t, (cudnnHandle_t,), handle)
end

function cudnnSetStream(handle::cudnnHandle_t, streamId::cudaStream_t)
    ccall((:cudnnSetStream, cudnn), cudnnStatus_t, (cudnnHandle_t, cudaStream_t), handle, streamId)
end

function cudnnGetStream(handle::cudnnHandle_t, streamId)
    ccall((:cudnnGetStream, cudnn), cudnnStatus_t, (cudnnHandle_t, Ptr{cudaStream_t}), handle, streamId)
end

function cudnnCreateTensorDescriptor(tensorDesc)
    ccall((:cudnnCreateTensorDescriptor, cudnn), cudnnStatus_t, (Ptr{cudnnTensorDescriptor_t},), tensorDesc)
end

function cudnnSetTensor4dDescriptor(tensorDesc::cudnnTensorDescriptor_t, format::cudnnTensorFormat_t, dataType::cudnnDataType_t, n::Cint, c::Cint, h::Cint, w::Cint)
    ccall((:cudnnSetTensor4dDescriptor, cudnn), cudnnStatus_t, (cudnnTensorDescriptor_t, cudnnTensorFormat_t, cudnnDataType_t, Cint, Cint, Cint, Cint), tensorDesc, format, dataType, n, c, h, w)
end

function cudnnSetTensor4dDescriptorEx(tensorDesc::cudnnTensorDescriptor_t, dataType::cudnnDataType_t, n::Cint, c::Cint, h::Cint, w::Cint, nStride::Cint, cStride::Cint, hStride::Cint, wStride::Cint)
    ccall((:cudnnSetTensor4dDescriptorEx, cudnn), cudnnStatus_t, (cudnnTensorDescriptor_t, cudnnDataType_t, Cint, Cint, Cint, Cint, Cint, Cint, Cint, Cint), tensorDesc, dataType, n, c, h, w, nStride, cStride, hStride, wStride)
end

function cudnnGetTensor4dDescriptor(tensorDesc::cudnnTensorDescriptor_t, dataType, n, c, h, w, nStride, cStride, hStride, wStride)
    ccall((:cudnnGetTensor4dDescriptor, cudnn), cudnnStatus_t, (cudnnTensorDescriptor_t, Ptr{cudnnDataType_t}, Ptr{Cint}, Ptr{Cint}, Ptr{Cint}, Ptr{Cint}, Ptr{Cint}, Ptr{Cint}, Ptr{Cint}, Ptr{Cint}), tensorDesc, dataType, n, c, h, w, nStride, cStride, hStride, wStride)
end

function cudnnSetTensorNdDescriptor(tensorDesc::cudnnTensorDescriptor_t, dataType::cudnnDataType_t, nbDims::Cint, dimA, strideA)
    ccall((:cudnnSetTensorNdDescriptor, cudnn), cudnnStatus_t, (cudnnTensorDescriptor_t, cudnnDataType_t, Cint, Ptr{Cint}, Ptr{Cint}), tensorDesc, dataType, nbDims, dimA, strideA)
end

function cudnnGetTensorNdDescriptor(tensorDesc::cudnnTensorDescriptor_t, nbDimsRequested::Cint, dataType, nbDims, dimA, strideA)
    ccall((:cudnnGetTensorNdDescriptor, cudnn), cudnnStatus_t, (cudnnTensorDescriptor_t, Cint, Ptr{cudnnDataType_t}, Ptr{Cint}, Ptr{Cint}, Ptr{Cint}), tensorDesc, nbDimsRequested, dataType, nbDims, dimA, strideA)
end

function cudnnDestroyTensorDescriptor(tensorDesc::cudnnTensorDescriptor_t)
    ccall((:cudnnDestroyTensorDescriptor, cudnn), cudnnStatus_t, (cudnnTensorDescriptor_t,), tensorDesc)
end

function cudnnTransformTensor(handle::cudnnHandle_t, alpha, xDesc::cudnnTensorDescriptor_t, x, beta, yDesc::cudnnTensorDescriptor_t, y)
    ccall((:cudnnTransformTensor, cudnn), cudnnStatus_t, (cudnnHandle_t, Ptr{Void}, cudnnTensorDescriptor_t, Ptr{Void}, Ptr{Void}, cudnnTensorDescriptor_t, Ptr{Void}), handle, alpha, xDesc, x, beta, yDesc, y)
end

function cudnnAddTensor(handle::cudnnHandle_t, alpha, aDesc::cudnnTensorDescriptor_t, A, beta, cDesc::cudnnTensorDescriptor_t, C)
    ccall((:cudnnAddTensor, cudnn), cudnnStatus_t, (cudnnHandle_t, Ptr{Void}, cudnnTensorDescriptor_t, Ptr{Void}, Ptr{Void}, cudnnTensorDescriptor_t, Ptr{Void}), handle, alpha, aDesc, A, beta, cDesc, C)
end

function cudnnCreateOpTensorDescriptor(opTensorDesc)
    ccall((:cudnnCreateOpTensorDescriptor, cudnn), cudnnStatus_t, (Ptr{cudnnOpTensorDescriptor_t},), opTensorDesc)
end

function cudnnSetOpTensorDescriptor(opTensorDesc::cudnnOpTensorDescriptor_t, opTensorOp::cudnnOpTensorOp_t, opTensorCompType::cudnnDataType_t, opTensorNanOpt::cudnnNanPropagation_t)
    ccall((:cudnnSetOpTensorDescriptor, cudnn), cudnnStatus_t, (cudnnOpTensorDescriptor_t, cudnnOpTensorOp_t, cudnnDataType_t, cudnnNanPropagation_t), opTensorDesc, opTensorOp, opTensorCompType, opTensorNanOpt)
end

function cudnnGetOpTensorDescriptor(opTensorDesc::cudnnOpTensorDescriptor_t, opTensorOp, opTensorCompType, opTensorNanOpt)
    ccall((:cudnnGetOpTensorDescriptor, cudnn), cudnnStatus_t, (cudnnOpTensorDescriptor_t, Ptr{cudnnOpTensorOp_t}, Ptr{cudnnDataType_t}, Ptr{cudnnNanPropagation_t}), opTensorDesc, opTensorOp, opTensorCompType, opTensorNanOpt)
end

function cudnnDestroyOpTensorDescriptor(opTensorDesc::cudnnOpTensorDescriptor_t)
    ccall((:cudnnDestroyOpTensorDescriptor, cudnn), cudnnStatus_t, (cudnnOpTensorDescriptor_t,), opTensorDesc)
end

function cudnnOpTensor(handle::cudnnHandle_t, opTensorDesc::cudnnOpTensorDescriptor_t, alpha1, aDesc::cudnnTensorDescriptor_t, A, alpha2, bDesc::cudnnTensorDescriptor_t, B, beta, cDesc::cudnnTensorDescriptor_t, C)
    ccall((:cudnnOpTensor, cudnn), cudnnStatus_t, (cudnnHandle_t, cudnnOpTensorDescriptor_t, Ptr{Void}, cudnnTensorDescriptor_t, Ptr{Void}, Ptr{Void}, cudnnTensorDescriptor_t, Ptr{Void}, Ptr{Void}, cudnnTensorDescriptor_t, Ptr{Void}), handle, opTensorDesc, alpha1, aDesc, A, alpha2, bDesc, B, beta, cDesc, C)
end

function cudnnSetTensor(handle::cudnnHandle_t, yDesc::cudnnTensorDescriptor_t, y, valuePtr)
    ccall((:cudnnSetTensor, cudnn), cudnnStatus_t, (cudnnHandle_t, cudnnTensorDescriptor_t, Ptr{Void}, Ptr{Void}), handle, yDesc, y, valuePtr)
end

function cudnnScaleTensor(handle::cudnnHandle_t, yDesc::cudnnTensorDescriptor_t, y, alpha)
    ccall((:cudnnScaleTensor, cudnn), cudnnStatus_t, (cudnnHandle_t, cudnnTensorDescriptor_t, Ptr{Void}, Ptr{Void}), handle, yDesc, y, alpha)
end

function cudnnCreateFilterDescriptor(filterDesc)
    ccall((:cudnnCreateFilterDescriptor, cudnn), cudnnStatus_t, (Ptr{cudnnFilterDescriptor_t},), filterDesc)
end

function cudnnSetFilter4dDescriptor(filterDesc::cudnnFilterDescriptor_t, dataType::cudnnDataType_t, format::cudnnTensorFormat_t, k::Cint, c::Cint, h::Cint, w::Cint)
    ccall((:cudnnSetFilter4dDescriptor, cudnn), cudnnStatus_t, (cudnnFilterDescriptor_t, cudnnDataType_t, cudnnTensorFormat_t, Cint, Cint, Cint, Cint), filterDesc, dataType, format, k, c, h, w)
end

function cudnnGetFilter4dDescriptor(filterDesc::cudnnFilterDescriptor_t, dataType, format, k, c, h, w)
    ccall((:cudnnGetFilter4dDescriptor, cudnn), cudnnStatus_t, (cudnnFilterDescriptor_t, Ptr{cudnnDataType_t}, Ptr{cudnnTensorFormat_t}, Ptr{Cint}, Ptr{Cint}, Ptr{Cint}, Ptr{Cint}), filterDesc, dataType, format, k, c, h, w)
end

function cudnnSetFilterNdDescriptor(filterDesc::cudnnFilterDescriptor_t, dataType::cudnnDataType_t, format::cudnnTensorFormat_t, nbDims::Cint, filterDimA)
    ccall((:cudnnSetFilterNdDescriptor, cudnn), cudnnStatus_t, (cudnnFilterDescriptor_t, cudnnDataType_t, cudnnTensorFormat_t, Cint, Ptr{Cint}), filterDesc, dataType, format, nbDims, filterDimA)
end

function cudnnGetFilterNdDescriptor(filterDesc::cudnnFilterDescriptor_t, nbDimsRequested::Cint, dataType, format, nbDims, filterDimA)
    ccall((:cudnnGetFilterNdDescriptor, cudnn), cudnnStatus_t, (cudnnFilterDescriptor_t, Cint, Ptr{cudnnDataType_t}, Ptr{cudnnTensorFormat_t}, Ptr{Cint}, Ptr{Cint}), filterDesc, nbDimsRequested, dataType, format, nbDims, filterDimA)
end

function cudnnDestroyFilterDescriptor(filterDesc::cudnnFilterDescriptor_t)
    ccall((:cudnnDestroyFilterDescriptor, cudnn), cudnnStatus_t, (cudnnFilterDescriptor_t,), filterDesc)
end

function cudnnCreateConvolutionDescriptor(convDesc)
    ccall((:cudnnCreateConvolutionDescriptor, cudnn), cudnnStatus_t, (Ptr{cudnnConvolutionDescriptor_t},), convDesc)
end

function cudnnSetConvolution2dDescriptor(convDesc::cudnnConvolutionDescriptor_t, pad_h::Cint, pad_w::Cint, u::Cint, v::Cint, upscalex::Cint, upscaley::Cint, mode::cudnnConvolutionMode_t)
    ccall((:cudnnSetConvolution2dDescriptor, cudnn), cudnnStatus_t, (cudnnConvolutionDescriptor_t, Cint, Cint, Cint, Cint, Cint, Cint, cudnnConvolutionMode_t), convDesc, pad_h, pad_w, u, v, upscalex, upscaley, mode)
end

function cudnnSetConvolution2dDescriptor_v5(convDesc::cudnnConvolutionDescriptor_t, pad_h::Cint, pad_w::Cint, u::Cint, v::Cint, upscalex::Cint, upscaley::Cint, mode::cudnnConvolutionMode_t, dataType::cudnnDataType_t)
    ccall((:cudnnSetConvolution2dDescriptor_v5, cudnn), cudnnStatus_t, (cudnnConvolutionDescriptor_t, Cint, Cint, Cint, Cint, Cint, Cint, cudnnConvolutionMode_t, cudnnDataType_t), convDesc, pad_h, pad_w, u, v, upscalex, upscaley, mode, dataType)
end

function cudnnGetConvolution2dDescriptor(convDesc::cudnnConvolutionDescriptor_t, pad_h, pad_w, u, v, upscalex, upscaley, mode)
    ccall((:cudnnGetConvolution2dDescriptor, cudnn), cudnnStatus_t, (cudnnConvolutionDescriptor_t, Ptr{Cint}, Ptr{Cint}, Ptr{Cint}, Ptr{Cint}, Ptr{Cint}, Ptr{Cint}, Ptr{cudnnConvolutionMode_t}), convDesc, pad_h, pad_w, u, v, upscalex, upscaley, mode)
end
